--- a/Readme
+++ b/Readme
@@ -31,6 +31,6 @@ We utilized a powerful tech stack to bring this project to life:
 
 Embark on a virtual tour like no other with our Tourism Website using Three.js. Experience the thrill of exploration, immerse yourself in history, and witness architectural wonders—all from the comfort of your own home!
 
-Visit our website [insert website URL] to begin your adventure today. Don't forget to share your thoughts and feedback—your virtual journey awaits! ✨
+Visit our website to begin your adventure today. Don't forget to share your thoughts and feedback—your virtual journey awaits! ✨
 
 #TourismWebsite #VirtualTour #Threejs #WebDevelopment #VirtualExperience
